[package]
name = "x86_64_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.14", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

