[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#riscv = { version = "0.8.0" }
riscv = { path = "../../riscv" }
# modify riscv(0.6.0)
# riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"]  } 
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.10.1"


[profile.release]
debug = true
