[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "/home/philip/LearnDemo/rCore-Tutorial-Book-v3/riscv" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
xmas-elf = "0.8.0"


[profile.release]
debug = true
