[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "/home/philip/LearnDemo/rCore-Tutorial-Book-v3/riscv" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
xmas-elf = "0.8.0"
virtio-drivers = { path = "/home/philip/GitProject/virtio-drivers" }
k210-pac =  { path = "/home/philip/GitProject/k210-pac" }
k210-hal =  { path = "/home/philip/GitProject/k210-hal" }
k210-soc =  { path = "/home/philip/GitProject/k210-soc" }
easy-fs = { path = "../easy-fs" }


[profile.release]
debug = true
